# autoclicker

./: README.md  auto_clicker.py  main.py  pyproject.toml  requirements.txt
